@@ -1,3 +1,5 @@
+* find_best_supplier doesn't optimize anymore on the delivery delay
+
 Version 2.6.0 - 2012-10-22
 * Bug fixes (see mercurial logs for details)
 * Generate also purchase requests for assets
